--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -372,31 +372,27 @@ To quantify an animal's changes in behavior in response to $\e(R)$ and $\var(R)$
 
 ### Modeling effects of $\e(R)$ and $\var(R)$
 
-***CONTINUE READING HERE***
+\noindent As discussed in the section on modeling $R$, the first step to modeling $H$ is to choose an appropriate distribution. Since $H$ is strictly positive and continuous, a Gamma distribution seems the most appropriate among the distributions currently offered by the `mgcv` package [@wood_generalized_2017]. The Tweedie distribution would also be appropriate if the mean-variance relationship of the Gamma distribution does not fit the data well.
 
-***CHANGE MODELS FOR SIMS REG TO LOCATION-SCALE GAMMA***
-
-\noindent As discussed in the section on modeling $R$, the first step to modeling $H$ is to choose an appropriate distribution. Since $H$ is strictly positive and continuous, a Gamma distribution seems the most appropriate among the distributions currently offered by the `mgcv` package [@wood_generalized_2017]. The Tweedie distribution would also be appropriate if the mean-variance relationship of the Gamma distribution does not fit the data well. The decrease in $\var(H)$ as $\e(R)$ increases and $\var(R)$ decreases in figure \@ref(fig:5-5-reg) suggests that a location-scale model is likely required. If there is not sufficient data to fit a location scale model, a simple Gamma model may be sufficient, but we suggest selecting the best distribution using an information criterion such as the Akaike Information Criterion [AIC, see @akaike_new_1974]. While a GAM would allow the effects of $\e(R)$ and $\var(R)$ on $H$ to be quite flexible, we suggest using a GLM rather than a GAM (unlike when modeling $R$) because we expect the relationship to be fairly simple and monotonic. Additionally, restricting the model to a GLM reduces the risk of issues that may arise due to limited sample size and temporal autocorrelation in $\e(R)$ and $\var(R)$. If one interested in fitting a GAM but imposing shape restrictions, such as monotonicity, we sugget using the `scam` package [@pya_scam_2022].
+The decrease in $\var(H)$ as $\e(R)$ increases and as $\var(R)$ decreases in figure \@ref(fig:5-5-reg) suggests that a location-scale model is likely required. If there is not sufficient data to fit a location scale model (which is not the case here), a simple Gamma model may be sufficient, but we suggest selecting the best distribution using an information criterion such as the Akaike Information Criterion [AIC, see @akaike_new_1974]. While a GAM would allow the effects of $\e(R)$ and $\var(R)$ on $H$ to be quite flexible, we suggest using a GLM rather than a GAM (unlike when modeling $R$) because we expect the relationship to be fairly simple and monotonic. Additionally, restricting the model to a GLM reduces the risk of issues that may arise due to limited sample size and temporal autocorrelation in $\e(R)$ and $\var(R)$. If one interested in fitting a GAM but imposing shape restrictions, such as monotonicity, we sugget using the `scam` package [@pya_scam_2022].
 
 ### An empirical example: Lowland tapir in the Brazilian Cerrado
 
-***CHANGE MODELS FOR TAPIR REG TO LOCATION-SCALE GAMMA***
+In this section, we use empirical tracking data on a lowland tapir (\emph{Tapirus terrestris}) from the Brazilian Cerrado to show how this framework can be applied to better understand the movement ecology of free-ranging animals. We estimate $\e(R)$ and $\var(R)$ by modeling NDVI [@pettorelli_normalized_2011] using a location-scale Gaussian GAM. Although a beta model would be more appropriate, the `mgcv` package does not currently support location-scale beta models. While the `brms` model supports beta location-scale models, the dataset is sufficiently large and with data sufficiently away from the boundaries (i.e., -1 and 1) that we expect the estimates to be reasonably accurate for an illustrative example. Additional information regarding the modeling can be found in Appendix 2.
 
-***ENSURE NDVI MODEL IS BASED ON DATA WITHOUT THE DEC 2017 RASTER***
-
-In this section, we use real-world tracking data on a lowland tapir (\emph{Tapirus terrestris}) from the Brazilian Cerrado to show how this framework can be applied to better understand the movement ecology of free-ranging animals. We estimate $\e(R)$ and $\var(R)$ by modeling NDVI [@pettorelli_normalized_2011] using a location-scale Gaussian GAM. Although a beta model would be more appropriate, the `mgcv` package does not currently support location-scale beta models. While the `brms` model supports beta location-scale models, the dataset is sufficiently large and with data sufficiently away from the boundaries (i.e., -1 and 1) that we expect the estimates to be reasonably accurate for an illustrative example. Additional information regarding the modeling can be found in Appendix 2.
-
-```{r tapir-mw, fig.cap="Seven-day home range size of a tapir (\\emph{Tapirus terrestris}) in response to changes in mean and variance in resource abundance. (a.) GPS tracking data of the tapir. (b.) Mean resource abundance esimated as the mean NDVI at the locations visited by the tapir. (c.) Varince in resource abundance esimated as the average variance in NDVI at the locations visited by the tapir. (d.) Estimated home range size during each seven-day period, based on 50\\% (bold) and 95\\% (thin) utilization quantiles. (e.) Effect of resource abundance on home range size. (f.) Effect of resource unpredictability on home range size. The effects in panels e and f were estimated using two generalized linear models with Gamma families of distributions. The tapir movement data corresponds to the individual named \"Anna\" from the Cerrado sample of Medici $et~al.$ (2022).", out.width='100%'}
+```{r tapir-mw, fig.cap="Seven-day home range size of a tapir (\\emph{Tapirus terrestris}) in response to changes in mean and variance in resource abundance. (a.) GPS tracking data of the tapir. (b.) Mean resource abundance esimated as the mean NDVI at the locations visited by the tapir. (c.) Varince in resource abundance esimated as the average variance in NDVI at the locations visited by the tapir. (d.) Estimated home range size during each seven-day period, based on 50\\% and 95\\% utilization quantiles. (e.) Effect of resource abundance on home range size. (f.) Effect of resource unpredictability on home range size. The effects in panels e and f were estimated using two generalized linear models with Gamma families of distributions. Although a single model would be ideal, the small sample size and collinearity between $\\e(R)$ and $\\var(R)$ prevent us from estimating accurate effects of $\\e(R)$ and $\\var(R)$ within the same model (see Appendix 2). The tapir movement data corresponds to the individual named \"Anna\" from the Cerrado sample of Medici $et~al.$ (2022).", out.width='100%'}
 knitr::include_graphics('../figures/tapir-example.png')
 ```
 
-Figure \@ref(fig:tapir-mw) illustrates  the tapir's response to changes in $\e(R)$ and $\var(R)$. Panel **a** provides an overview of the tracking data, while panels **b** and **c** show the changes in mean and variance in NDVI, respectively. Panel **d** shows the changes in the tapir's spatial use over time. Note how the home range size is larger during periods of lower average NDVI (e.g., August 2017) and smallest during periods with high NDVI (January 2018), despite an increase in the variance in NDVI. In contrast, when resources are scarce and highly unpredictable (August 2018), the tapir uses up to 5 times as much space. Finally, panels **e** and **f** suggest that the tapir's spatial needs change based on the simple relationships we hypothesized (figures \@ref(fig:mu-hyp) and \@ref(fig:s2-hyp)) and found in the simulated responses (figure \@ref(fig:5-5-reg)).
+Figure \@ref(fig:tapir-mw) illustrates  the tapir's response to changes in $\e(R)$ and $\var(R)$. Panel **a** provides an overview of the tracking data, while panels **b** and **c** show the changes in mean and variance in NDVI, respectively. Panel **d** shows the changes in the tapir's spatial use over time. Note how the home range size is larger during periods of lower average NDVI (e.g., August 2017) and smallest during periods with high NDVI (January 2018), despite an increase in the variance in NDVI. In contrast, when resources are scarce and highly unpredictable (August 2018), the tapir uses up to 5 times more space than when resources are abundant and predictable. Finally, panels **e** and **f** show that the tapir's spatial needs change based on the simple relationships we hypothesized (figures \@ref(fig:mu-hyp) and \@ref(fig:s2-hyp)) and supported with the simulated responses (figure \@ref(fig:5-5-reg)).
 
 ## Applications for conservation
 
-\noindent The designation of high-quality habitats is a central concern of many conservation initiatives. Using this framework, one can quantify the quality of a habitat based on its resource abundance and stochasticity while also estimating the amount of space animals would need in the habitat. Researchers and conservation organizations can use the methods presented in this paper to assess the quality of current protected areas and predict whether or not the areas will be sufficiently large or appropriate in future decades. Additionally, the methods can also be used to evaluate new potential conservation areas. In light of Canada's pledge to conserve 30% of its landmass and waters by 2030 [@ref], the framework presented here provide useful metrics for maximizing the quality and stability of protected areas while estimating their quality in the decades to come.
+\noindent The designation of high-quality habitats is a central concern of many conservation initiatives. This framework allows consultants and conservation managers to quantify the quality of a habitat based on its resource abundance and stochasticity while also estimating the amount of space animals would need in the habitat. With the methods presented in this paper, one can assess the quality of current protected areas and predict whether or not the areas will be sufficiently large or appropriate in future decades while also evaluating new potential conservation areas. In light of Canada's pledge to conserve 30% of its landmass and waters by 2030 [@ref], the framework and methods presented here provide useful metrics for maximizing the quality and stability of protected areas while estimating their quality in the decades to come under various climate change scenarios [@ref].
 
-Accounting for changes in resource abundance and resource stochasticity (e,g, between seasons or "good" and "bad" years) allows researchers and conservation managers can ensure the quality of protected areas is sufficiently high to sustain biodiversity for decades after the designation of the protected area. Protecting areas with high resource abundance and low resource unpredictability will decrease animal's spatial needs while also increasing the resiliency in home range size to small changes in resource abundance or stochasticity, since changes in spatial needs are more drastic when $\e(R)$ is low or $\var(R)$ is high (figure \@ref(fig:5-5-reg), panels e and f).
+Accounting for changes in resource abundance and resource stochasticity (e,g, between seasons or "good" and "bad" years) allows researchers and conservation managers can ensure the quality of protected areas is sufficiently high to sustain biodiversity long term. Protecting areas with high resource abundance and low resource unpredictability will minimize animal's spatial needs while also increasing the stability in resiliency in spatial needs, since changes in spatial needs are more drastic when $\e(R)$ is low or $\var(R)$ is high (figure \@ref(fig:5-5-reg), panels e and f).
+
+***need to add a few more ideas?***
 
 <!-- create a pdf for supplementary information on how to create the 5x5 panel and run methods w real data, as well as considerations and potential issues about modeling means and variances -->
 
@@ -404,7 +400,7 @@ Accounting for changes in resource abundance and resource stochasticity (e,g, be
 
 # Conclusion
 
-\noindent The work presented here provides a unifying framework for viewing animal movement as a function of resource abundance. We provide realistic and flexible hypotheses of the effects of $\e(R)$ and $\var(R)$ on animals' spatial needs and movement behavior. We demonstrate that animals' spatial needs respond nonlinearly to both $\e(R)$ and $\var(R)$, and we demonstrate the importance of accounting for $\var(R)$ besides $\e(R)$. We also provide way of modeling animal movement continuously rather than imposing arbitrary thresholds between range-resident and nomadic animals. The methods presented here can be applied to assess the current and future quality of protected areas while also estimating the amount of space animals will need.
+\noindent The work presented here provides a unifying framework for viewing animal movement as a function of resource abundance. We provide realistic and flexible hypotheses of the effects of $\e(R)$ and $\var(R)$ on animals' spatial needs and movement behavior. We demonstrate that animals' spatial needs respond nonlinearly to both resource abundance and stochasticity, and we demonstrate the importance of accounting for $\var(R)$ besides $\e(R)$. We also provide a way of modeling animal movement continuously rather than imposing arbitrary thresholds between different types of behaviors, including temporal changes in spatial needs and shifts between range-residency and nomadism). The methods presented here can be applied to assess the current and future quality of protected areas while also estimating the amount of space animals currenly need and will need in the future under different climate change scenarios.
 
 \newpage
 
