--- a/writing/appendix-1-simulations.Rmd
+++ b/writing/appendix-1-simulations.Rmd
@@ -5,16 +5,21 @@ author:
   - name: Stefano Mezzini
     email: stefano.mezzini@ubc.ca
     institute: ubco
-  - name: Emilia Patrícia Medici
+  - name: Adam T. Ford
+    institute: ubco
+  - name: Jacob R. Goheen
+    institute: wyom
+  - name: E. Patrícia Medici
     institute: [tapir, iucn, escas]
   - name: Michael J. Noonan
     email: michael.noonan@ubc.ca
     institute: ubco
 institute:
   - ubco: The Irving K. Barber Faculty of Science, The University of British Columbia, Okanagan Campus, Kelowna, Canada.
-  - tapir: Lowland Tapir Conservation Initiative (LTCI), Instituto de Pesquisas Ecológicas (IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960‑000, Brazil.
+  - wyom: Department of Zoology and Physiology, University of Wyoming, Laramie, Wyoming, United States of America
+  - tapir: Lowland Tapir Conservation Initiative (LTCI), Instituto de Pesquisas Ecológicas (IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960-000, Brazil.
   - iucn: IUCN SSC Tapir Specialist Group (TSG), Campo Grande, Brazil.
-  - escas: Escola Superior de Conservação Ambiental E Sustentabilidade (ESCAS/IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960‑000, Brazil.
+  - escas: Escola Superior de Conservação Ambiental E Sustentabilidade (ESCAS/IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960-000, Brazil.
 bibliography: 'env-var-review.bib'
 csl: 'the-american-naturalist.csl'
 fontsize: 12pt
@@ -35,7 +40,7 @@ output:
 
 <!-- set default code chunk options -->
 
-```{r, echo=TRUE}
+```{r, echo=FALSE}
 knitr::opts_chunk$set(eval = FALSE,    # do not run R code
                       echo = TRUE,     # print R code
                       message = FALSE, # hide messages
@@ -58,25 +63,21 @@ knitr::opts_knit$set(root.dir = '..')
 
 # To do {-}
 
-* change all references to scripts to the correct file locations
-* give an overview of how the sims work at the beginning of the pdf (including defining "encounters" with resources)
-* explain the checks in `delta-t-sensitivity.R`
-* reduce scaling of figure 2
-* fix captions (incomplete, maybe incorrect def of sims, HR not V(pos))
+* fix captions (incomplete, HR not V(pos)); take captions from manuscript
 
 \newpage
 
 # Overview
 
-This appendix illustrates all the steps necessary to produce the simulation figures in the main manuscript. For ease of reference, we also include the figures here (Figures \@ref(fig:5-5-sims) and \@ref(fig:5-5-reg)). To achieve full transparency while minimizing computational times, the code illustrated in this pdf is not executed during the knitting of the document. Instead, the R Markdown document (`writing/appendix-1-simulations.Rmd`) contains code chunks that import the `RDS` files saved by the scripts used during the analysis via `R` code that is not printed in the pdf file. Although one can replicate the analyses by running the code in this pdf, we suggest only using this document for illustrative purposes and as a general guide. We suggest using the `R` scripts to replicate the simulations, instead.
+This appendix illustrates all the steps necessary to produce the simulation figures in the main manuscript. For ease of reference, we also include the figures here (figures \@ref(fig:5-5-sims) and \@ref(fig:5-5-reg)). To achieve full transparency while minimizing computational times, the code illustrated in this pdf is not executed during the knitting of the document. Instead, the R Markdown document (`writing/appendix-1-simulations.Rmd`) contains code chunks that import the `RDS` files saved by the scripts used during the analysis via `R` code that is not printed in the pdf file. Although one can replicate the analyses by running the code in this pdf, we suggest only using this document for illustrative purposes and as a general guide. We suggest using the `R` scripts to replicate the simulations, instead.
 
-```{r 5-5-sims, eval=TRUE, echo=FALSE, fig.cap="Simulated spatial requirements for animals living in habitats where the mean and variance in resource availability ($R$) are constant, linearly increasing, cyclical, drifting, or erratic over time. The bottom line indicates the animal's core home range (0.5 quantile), while the top line indicates the 0.95 utilization quantile. Note how both quantiles decrease nonlinearly as $\\e(R)$ increases, and they increase approximately linearly as $\\var(R)$ increases. Additionally, the variance in both quantiles is higher when $\\var(R)$ is higher, and changes in $\\var(R)$ have greater impacts when $\\e(R)$ is low.\nSimulations were run such that animals followed the same 100 tracks at each time point starting from the point $\\langle 0, 0\\rangle$ until they reach satiety, at which point they returned to $\\langle 0, 0\\rangle$ over the same amount of time. The animal's spatial variance parameter was then calculated using an Ornstein-Uhlenbeck Foraging (OUF) model via the $\\tt{ctmm}$ package", out.width='100%'}
-knitr::include_graphics('H:/GitHub/env-var-review/figures/mean-variance-5-by-5-hr-sims.png',
+```{r 5-5-sims, eval=TRUE, echo=FALSE, fig.cap="Simulated spatial requirements for animals living in habitats where the mean and variance in resource abundance ($R$) are constant, linearly increasing, cyclical, drifting, or erratic over time. The lower green line indicates the animal's core home range (50\\% quantile), while the top line indicates the 0.95 utilization quantile. Note how both quantiles decrease nonlinearly as $\\e(R)$ increases, and they increase nonlinearly as $\\var(R)$ increases. Additionally, the variance in both quantiles is higher when $\\var(R)$ is higher, and changes in $\\var(R)$ have greater impacts when $\\e(R)$ is low.\nSimulations were run such that animals followed the same 1000 tracks at each time point starting from the location $\\langle 0, 0\\rangle$ until they reach satiety, after which they returned to $\\langle 0, 0\\rangle$ over the same amount of time required to reach satiety. The animal's home range was then estimated using an Ornstein-Uhlenbeck Foraging (OUF) model via the $\\tt{ctmm}$ package (Fleming and Calabrese 2021). ", out.width='100%'}
+knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/mean-variance-5-by-5-hr-sims.png',
                         rel_path = FALSE)
 ```
 
-```{r 5-5-reg, eval=TRUE, echo=FALSE, fig.cap="Effects of $\\e(R)$ and $\\var(R)$ on simulated spatial requirements. The relationships were estimated using a Generalized Linear Model with a Gamma family. The thicker bottom line indicates the relationships with the animal's core home range (0.5 quantile), while the thinner top line indicates the relationship with the 0.95 utilization quantile. Note the nonlinear decrease in both utilization quantiles as $\\e(R)$ increases and the nonlineear increase in both utilization quantiles as $\\var(R)$ increases.", out.width='100%'}
-knitr::include_graphics('H:/GitHub/env-var-review/figures/simulation-regression-plots.png',
+```{r 5-5-reg, eval=TRUE, echo=FALSE, fig.cap="Effects of $\\e(R)$ and $\\var(R)$ on simulated spatial requirements. The relationships were estimated using a Generalized Linear Model with a Gamma family of distributions that accounted for the effects of both $\\e(R)$ and $\\var(R)$ as well as differences between the two quantiles. The bottom line indicates the relationships with the animal's core home range (0.5 quantile), while the top line indicates the relationship with the 0.95 utilization quantile. Note the nonlinear decrease in both utilization quantiles as $\\e(R)$ increases and the nonlinear increase in both utilization quantiles as $\\var(R)$ increases.", out.width='100%'}
+knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/simulation-regression-plots.png',
                         rel_path = FALSE)
 ```
 
@@ -86,13 +87,14 @@ knitr::include_graphics('H:/GitHub/env-var-review/figures/simulation-regression-
 
 To reduce sampling variance between simulations, we use the same set of simulated tracks for each time point in each panel (figure \@ref(fig:sims-example)). In the `analysis/simulations/tracks.R` script, we generate $2^{10} = 1024$ tracks to check how many tracks are necessary to obtain stable home range estimates in the best- and worst-case scenarios. Most intermediate and diagnostic checks included in the `R` scripts are not included in this document for the sake of brevity and simplicity. In this script, we use the `ctmm` package [version 1.1.0, @fleming_ctmm_2021] for movement modeling, the `raster` package [version 3.6-3, @hijmans_raster_2022] to work with the simulated resource rasters, the `dplyr` [version 1.0.10, @wickham_dplyr_2022], `purrr` [version 0.3.5, @henry_purrr_2022], and `tidyr` [version 1.2.1, @wickham_tidyr_2022] packages for data wrangling, and the the `ggplot2` [version 3.4.0, @wickham_ggplot2_2016] and `cowplot` [version 1.1.1, @wilke_cowplot_2020] packages for plotting.
 
-```{r sims-example, echo=FALSE, eval=TRUE, fig.cap="Overview of how animals' spatial needs were simulated. (a.) Animal tracks were simulated using an infinitely diffusive movement model starting from the point $\\langle 0, 0 \\rangle$ (black and yellow square). (b.) Each time the track crossed into a new cell (green dots), the animal collected a random amount of resources that followed a Gamma distribution with common mean $\\mu (t)$ and variance $\\sigma^2 (t)$. (c.) Each time the animal collected more resources, its satiety (purple) increased. Once the animal collected sufficient resources, the animal stopped moving (i.e., the track was truncated). (d.) The process was repeated 100 times (13 tracks pictured in this panel). (e.) The final set of (truncated) tracks was then modeled using Ornstein-Uhlenbeck Foraging models to estimate the 95\\% and 50\\% home range estimates using Autocorrelated Kernel Density Estimates.", out.width='100%', fig.pos='!h'}
-knitr::include_graphics('H:/GitHub/env-var-review/figures/simulation-example.png',
+```{r sims-example, echo=FALSE, eval=TRUE, fig.cap="Overview of how animals' spatial needs were simulated. (a.) Animal tracks were simulated using an Integrated Ornstein-Uhlenbeck model (IOU; model, an infinitely diffusive and continous-velocity movement mode), starting from the point $\\langle 0, 0 \\rangle$ (black and yellow square). (b.) Each time the track crossed into a new cell (green dots), the animal collected a random amount of resources that followed a Gamma distribution with common mean $\\mu (t)$ and variance $\\sigma^2 (t)$. (c.) Each time the animal collected more resources, its satiety (purple) increased. Once the animal collected sufficient resources, the animal stopped moving (i.e., the track was truncated). (d.) The process was repeated $2^{10}=1024$ times (13 tracks pictured in this panel). (e.) The final set of (truncated) tracks was then modeled using Ornstein-Uhlenbeck Foraging models to estimate the 95\\% and 50\\% home range estimates using Autocorrelated Kernel Density Estimates.", out.width='100%', fig.pos='!h'}
+knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/simulation-example.png',
                         rel_path = FALSE)
 ```
 
-```{r simulate-tracks, eval=TRUE}
-# NOTE: change your working directory to "env-var-review" or modify file paths
+```{r simulate-tracks, eval=TRUE, warning=FALSE}
+# NOTE: change working directory to "hr-resource-stoch" or modify file paths
+setwd('H:/GitHub/hr-resource-stoch')
 
 # attach all necessary packages
 library('ctmm')   # for generating movement models and movement modeling
@@ -103,13 +105,13 @@ library('tidyr')   # for data wrangling (e.g., nested tibbles)
 library('ggplot2') # for fancy plots
 
 source('functions/rgamma2.R') # rgamma() parameterized by mean and variance
-source('analysis/figures/mean-variance-trends-panel-data.R') # means & variances
+source('analysis/figures/mean-variance-trends-panel-data.R') # mu and sigma2
 source('analysis/movement-model.R') # for consistency across scripts
 source('functions/get_hr.R') # for extracting gaussian home range
 source('functions/label_visits.R') # decides when animal encounters food
 
 DELTA_T <- 60 # sampling interval in seconds
-SAMPLES <- seq(0, 60 * 60 * 12, by = DELTA_T) # 12h every DELTA_T seconds
+SAMPLES <- seq(0, 60 * 60 * 12, by = DELTA_T) # 12 hours by DELTA_T seconds
 
 # projected raster of resources
 PROJECTION <- '+proj=aeqd +lon_0=0 +lat_0=0 +datum=WGS84'
@@ -145,7 +147,7 @@ tracks <-
                           label_visits(.tel = x, .habitat = HABITAT)
                         }))
 
-# make a single, large tibble (will need lots of RAM)
+# make a single, large tibble
 tracks <- tidyr::unnest(tracks, track)
 tracks
 ```
@@ -173,7 +175,7 @@ Using three tracks generated using three arbitrary seeds (1, 2, and 3), we explo
 **Exploratory plot \@ref(fig:dt-sensitivity)d.** The three tracks used for these exploratory plots are sufficiently different that we considered them to be a representative sample of movement tracks simulated by the OUF model. All three tracks have a reasonable amount of tortuous movement and directed movement. 
 
 ```{r dt-sensitivity, fig.cap="Exploratory plots used to decide an appropriate sampling interval. (a.) Histograms of the number of encounters as a function of the interval between encounters, with a binwith of 30 seconds. Although some encounters occur with less than 30 seconds between them, most of them occur at least 60 seconds apart. (b.) Number of encounters with food detected as a function of sampling interval. The colored lines indicate the estimated relationship based on a Generalized Additive Model fit using the $\\tt{geom\\_smooth}$ function from the $\\tt{ggplot2}$ package. Although the number of encounters detected decreases as sampling interval doubles, the loss at 30 seconds is negligible. (c.) Beginning of the track generated with seed \"1\" (purple line) with the location of each sample for different sampling intervals. Red dots indicate samples where the animal remained in the same cell, while the blue squares indicate when an animal was in a new cell, and thus encountered food. While the number of encounters detected decreases as the sampling interval increases, most of the encounters lost at $\\Delta t = 30$s occured because the animal remained almost adjacent to the borders between cells. (d.) The three tracks used in these tests over the raster used to determine when the animals encountered food.", out.width='100%', echo=FALSE, eval=TRUE}
-knitr::include_graphics('H:/GitHub/env-var-review/figures/thinning-examples.png',
+knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/thinning-examples.png',
                         rel_path = FALSE)
 ```
 
@@ -182,6 +184,8 @@ knitr::include_graphics('H:/GitHub/env-var-review/figures/thinning-examples.png'
 ## Checking how many tracks were necessary
 
 Script: `analysis/hr-simulation-extreme-scenarios.R`
+
+In this script, we check how many tracks are necessary to produce stable and accurate estimates of the spatial needs. We do so by estimating the home ranges of animals in the best-case scenario (highest $\e(R)$ and lowest $\var(R)$) and worst-case scenario (lowest $\e(R)$ and highest $\var(R)$).
 
 ```{r}
 set.seed(1) # for consistent results
@@ -198,7 +202,7 @@ BEST <- filter(d55, mu == max(mu)) %>% # highest mean resources
   slice(1) # take the first row only
 
 days <-
-  # modify WORST and BEST to follow the syntax used in 'offspring-simulations.R'
+  # modify WORST and BEST to follow the syntax in 'offspring-simulations.R'
   transmute(bind_rows(WORST, BEST),
             animal,
             mu,
@@ -209,13 +213,13 @@ days <-
   select(-timestamp) %>%
   # generate the food for each row from a gamma distribution
   mutate(food = rgamma2(mu = mu, sigma2 = sigma2, N = n()),
-         # if the animal visits a new cell, it finds food, otherwise it doesn't
+         # the animal finds food if it visits a new cell, otherwise not
          food = if_else(new_cell, food, 0)) %>%
   # end the movement once the animal has reached satiety
   group_by(day, animal, scenario) %>%
-  # calculate the total number of visits, total calories, and if animal is full
-  mutate(satiety = cumsum(food), # use for diagnostics if animals don't get full
-         full = satiety >= REQUIRED) %>% # did the animal reach the its needs?
+  # calculate the total visits, total calories, and if animal is full
+  mutate(satiety = cumsum(food), # for diagnostics if animals don't get full
+         full = satiety >= REQUIRED) %>% # did the animal reach its needs?
   filter(cumsum(full) <= 1) %>% # full only once
   ungroup()
 
@@ -224,7 +228,7 @@ if(FALSE) {
   days_end <-
     days %>%
     group_by(scenario, day) %>%
-    filter(full, ! duplicated(full)) %>% # take the 1st row where animal is full
+    filter(full, ! duplicated(full)) %>% # take 1st row where animal is full
     rename(t_expl = t) %>% # to avoid duplicated colnames with tracks
     # remove unneded columns (also avoids duplicated colnames with tracks)
     dplyr::select(-c(x, y, vx, vy, longitude, latitude, food))
@@ -292,7 +296,8 @@ if(FALSE) {
     facet_wrap(~ scenario, scales = 'free_y') +
     geom_line() +
     geom_line(aes(group = day), color = 'blue', lwd = 30) +
-    geom_line(aes(day, timestamp + t_expl, group = day), color = 'red', lwd =30)
+    geom_line(aes(day, timestamp + t_expl, group = day), color = 'red',
+              lwd = 30)
   
   days_summarized %>%
     filter(day <= 10) %>%
@@ -307,19 +312,21 @@ if(FALSE) {
 
 # estimate saturation curve of home range size over number of days
 saturation_days <-
-  expand_grid(n_days = (2^seq(1, log2(1e3), by = 0.2)) %>% round() %>% unique(),
+  expand_grid(n_days = (2^seq(1, log2(1e3), by = 0.2)) %>%
+                round() %>%
+                unique(),
               case = unique(days_summarized$scenario)) %>%
   mutate(data = map2(n_days, case,
                      \(.n, .case) filter(days_summarized,
                                          day <= .n,
                                          scenario == .case)),
-         tel = map(data, as.telemetry), # convert data to telemetry for modeling
+         tel = map(data, as.telemetry), # convert to telemetry for modeling
          theta = map(tel, \(x) ctmm.guess(data = x, interactive = FALSE)),
          m = map(1:n(), \(i) {
            cat('Fitting model', i, '\n')
            ctmm.fit(tel[[i]], theta[[i]])
            }), # fit movement model
-         sigma = map_dbl(m, \(.m) ctmm:::area.covm(.m$sigma)), # var(position)
+         sigma = map_dbl(m, \(.m) ctmm:::area.covm(.m$sigma)), # var(pos)
          hr = get_hr(.sigma = sigma, quantile = 0.95)) # Gaussian home range
 
 saveRDS(saturation_days, 'simulations/hr-saturation-days.rds')
@@ -328,8 +335,7 @@ saturation_days %>%
   select(case, n_days, sigma, hr) %>%
   readr::write_csv('simulations/hr-saturation-days.csv')
 
-p_hr_days <-
-  ggplot(saturation_days, aes(n_days, hr)) +
+ggplot(saturation_days, aes(n_days, hr)) +
   facet_wrap(~ case, nrow = 1) +
   geom_vline(xintercept = 100, color = 'darkorange') +
   geom_smooth(method = 'gam', color = 'black',
@@ -339,21 +345,22 @@ p_hr_days <-
   scale_x_continuous(expression(Number~of~days~sampled~(log[2]~scale)),
                      trans = 'log2', breaks = c(2, 16, 128, 1024),
                      limits = c(2, 1100)) +
-  scale_y_log10(expression(Estimated~home~range~(log[10]~scale))); p_hr_days
+  scale_y_log10(expression(Estimated~home~range~(log[10]~scale)))
 ```
 
 ```{r, eval=TRUE, echo=FALSE, fig.cap="Estimated spatial needs as a function of the number of days sampled for an animal in a habitat with the highest $\\e(R)$ and lowest $\\var(R)$ (left) and an animal with the lowest $\\e(R)$ and highest $\\var(R)$ (right). In both cases, 100 days are sufficient to produce stable estimates of spatial needs."}
-knitr::include_graphics('H:/GitHub/env-var-review/figures/hr-over-days.png',
+knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/hr-over-days.png',
                         rel_path = FALSE)
 ```
 
 
 # Main scripts (to be run in the following order)
 
-2. $\tt{analysis/simulations/hr-mean-variance-simulations-days.R}$
-3. $\tt{analysis/simulations/hr-mean-variance-simulations-days-summarized.R}$
-4. $\tt{analysis/simulations/hr-mean-variance-simulations-modeling.R}$
-5. $\tt{analysis/simulations/hr-mean-variance-simulations-hrs.R}$
+1. $\tt{analysis/simulations/hr-mean-variance-simulations-days.R}$
+2. $\tt{analysis/simulations/hr-mean-variance-simulations-days-summarized.R}$
+3. $\tt{analysis/simulations/hr-mean-variance-simulations-modeling.R}$
+4. $\tt{analysis/simulations/hr-mean-variance-simulations-hrs.R}$
+6. $\tt{analysis/simulations/modeling-R-and-hr.R}$
 
 \clearpage
 
