--- a/writing/appendix-2-empirical-modeling.Rmd
+++ b/writing/appendix-2-empirical-modeling.Rmd
@@ -5,16 +5,21 @@ author:
   - name: Stefano Mezzini
     email: stefano.mezzini@ubc.ca
     institute: ubco
-  - name: Emilia Patrícia Medici
+  - name: Adam T. Ford
+    institute: ubco
+  - name: Jacob R. Goheen
+    institute: wyom
+  - name: E. Patrícia Medici
     institute: [tapir, iucn, escas]
   - name: Michael J. Noonan
     email: michael.noonan@ubc.ca
     institute: ubco
 institute:
   - ubco: The Irving K. Barber Faculty of Science, The University of British Columbia, Okanagan Campus, Kelowna, Canada.
-  - tapir: Lowland Tapir Conservation Initiative (LTCI), Instituto de Pesquisas Ecológicas (IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960‑000, Brazil.
+  - wyom: Department of Zoology and Physiology, University of Wyoming, Laramie, Wyoming, United States of America
+  - tapir: Lowland Tapir Conservation Initiative (LTCI), Instituto de Pesquisas Ecológicas (IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960-000, Brazil.
   - iucn: IUCN SSC Tapir Specialist Group (TSG), Campo Grande, Brazil.
-  - escas: Escola Superior de Conservação Ambiental E Sustentabilidade (ESCAS/IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960‑000, Brazil.
+  - escas: Escola Superior de Conservação Ambiental E Sustentabilidade (ESCAS/IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960-000, Brazil.
 bibliography: 'env-var-review.bib'
 csl: 'the-american-naturalist.csl'
 fontsize: 12pt
@@ -73,7 +78,8 @@ Estimating the effects of resource abundance and unpredictability on the tapir's
 To minimize the computational costs of creating this appendix, we load the necessary objects through hidden `R` chunks rather than running all the code in the final pdf. Still, those interested in replicating the analysis can do so by using the code in the pdf document or the related `R` markdown (`Rmd`) document. Listed below are all the packages and source scripts required to run the analyses in this document. For spatial data, we use the `MODIStsp` package [version 2.0.9, @busetto_modistsp_2016] to download the NDVI rasters, the `raster` package [version 3.6-3, @hijmans_raster_2022] to work with the NDVI rasters, and the `sf` package [version 1.0-8, @pebesma_simple_2018]. We use the `dplyr` [version 1.0.10, @wickham_dplyr_2022], `purrr` [version 0.3.5, @henry_purrr_2022], and `tidyr` [version 1.2.1, @wickham_tidyr_2022] packages for data wrangling and the `lubridate` package [version 1.8.0, @grolemund_dates_2011] for converting calendar dates to decimal dates. Finally, we used the `ctmm` package [version 1.1.0, @fleming_ctmm_2021] and the `mgcv` package [version 1.8-41, @wood_generalized_2017] for modeling and the `ggplot2` [version 3.4.0, @wickham_ggplot2_2016] and `cowplot` [version 1.1.1, @wilke_cowplot_2020] packages for plotting.
 
 ```{r, eval=TRUE, comment=FALSE}
-# NOTE: change your working directory to be "env-var-review/writing", or
+# NOTE: to replicate the analyses, you need to change your working directory
+#       to "hr-resource-stoch/writing", or
 # modify all file paths as needed
 
 # attach all necessary packages
@@ -453,7 +459,7 @@ p_left <- plot_grid(plotlist = grobs, ncol = 1,
 Finally, we estimate the effects of $\e(R)$ and $\var(R)$ on the tapir's space use using the `geom_smooth()` function from the `ggplot2` package. Although one would ideally model the relationships with a formal model, we use `geom_smooth()` because the sampling of the estiamted means and variance are both *auto*correlated (figure \@ref(fig:)) and correlated, so the risk for biased estimates is high (figure \@ref(fig:mu-s2-rel)).
 
 ```{r mu-s2-rel, eval=TRUE, echo=FALSE, fig.cap="Scatterplot of estimated mean NDVI and variance in NDVI. Both variables are higly temporally autocorrelated, and there is also strong correlation between the two variables."}
-knitr::include_graphics('H:/GitHub/env-var-review/figures/mean-variance-relationship.png',
+knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/mean-variance-relationship.png',
                         rel_path = TRUE)
 ```
 
