added authors; minor edits

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -4,16 +4,21 @@ author:
   - name: Stefano Mezzini
     email: stefano.mezzini@ubc.ca
     institute: ubco
-  - name: Emilia Patrícia Medici
+  - name: Adam T. Ford
+    institute: ubco
+  - name: Jacob R. Goheen
+    institute: wyom
+  - name: E. Patrícia Medici
     institute: [tapir, iucn, escas]
   - name: Michael J. Noonan
     email: michael.noonan@ubc.ca
     institute: ubco
 institute:
   - ubco: The Irving K. Barber Faculty of Science, The University of British Columbia, Okanagan Campus, Kelowna, Canada.
-  - tapir: Lowland Tapir Conservation Initiative (LTCI), Instituto de Pesquisas Ecológicas (IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960‑000, Brazil.
+  - wyom: Department of Zoology and Physiology, University of Wyoming, Laramie, Wyoming, United States of America
+  - tapir: Lowland Tapir Conservation Initiative (LTCI), Instituto de Pesquisas Ecológicas (IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960-000, Brazil.
   - iucn: IUCN SSC Tapir Specialist Group (TSG), Campo Grande, Brazil.
-  - escas: Escola Superior de Conservação Ambiental E Sustentabilidade (ESCAS/IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960‑000, Brazil.
+  - escas: Escola Superior de Conservação Ambiental E Sustentabilidade (ESCAS/IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960-000, Brazil.
 bibliography: 'env-var-review.bib'
 csl: 'the-american-naturalist.csl'
 fontsize: 12pt
@@ -56,10 +61,10 @@ output:
 
 \tableofcontents
 
-\doublespacing
-
 <!-- start main body on a new page -->
 \newpage
+
+\doublespacing
 
 ```{r setup, include=FALSE}
 # set chunk defaults: don't print code, images 75% of page width and centered
@@ -127,15 +132,15 @@ While there are many other causes of animal movement, the relationship between a
 H = C / R,
 \end{equation}
 
-\noindent where $H$ is the animal's **home range size**, $C$ is the animal's resource consumption, and $R$ is the abundance of (usable) resources. More recently, various researches reported that home range size decreases linearly with resource abundance [desert mule deer: @relyea_home_2000; red panda: @bista_effect_2022]. Others demonstrated that spatial needs decrease nonlinearly as habitat productivity increases, with stronger decreases when resources are scarce [e.g., Canadian lynx: @herfindal_prey_2005; carnivores: @nilsen_can_2005; tigers: @simcharoen_female_2014; ferruginous hawks: @watson_ferruginous_2020]. Additionally, an animal's spatial requirements depend strongly on its metabolic rate, diet, and body weight [@harvey_primate_1981; @lindstedt_home_1986; @reiss_scaling_1988; @harvey_primate_1981; @gittleman_carnivore_1982; @boratynski_energetic_2020; @noonan_effects_2020]. Thus, there are many drivers of animal movement and many causes of variety between behaviors, and we currently lack a unifying framework for quantifying the effects of resource abundance and unpredictability on animals' spatial needs. And while abundant work has been done on estimating animals' responses to changes in resource abundance, there is little to no information on they respond to unpredictable changes in the resources they depend on.
+\noindent where $H$ is the animal's **home range size**, $C$ is the animal's resource consumption, and $R$ is the abundance of (usable) resources. More recently, various researches reported that home range size decreases linearly with resource abundance [desert mule deer: @relyea_home_2000; red panda: @bista_effect_2022]. Others demonstrated that spatial needs decrease nonlinearly as habitat productivity increases, with stronger decreases when resources are scarce [e.g., Canadian lynx: @herfindal_prey_2005; carnivores: @nilsen_can_2005; tigers: @simcharoen_female_2014; ferruginous hawks: @watson_ferruginous_2020]. Additionally, an animal's spatial requirements depend strongly on its metabolic rate, diet, and body weight [@harvey_primate_1981; @lindstedt_home_1986; @reiss_scaling_1988; @harvey_primate_1981; @gittleman_carnivore_1982; @boratynski_energetic_2020; @noonan_effects_2020]. Thus, there are many drivers of animal movement and many causes of variety between behaviors, and we currently lack a unifying framework for quantifying the effects of resource abundance and unpredictability on animals' spatial needs. While much work has been done on estimating animals' responses to resource abundance, there is little to no information on they respond to unpredictable changes in resources.
 
-In this paper, we refer to a location's average amount of available and accessible resources as **resource abundance**, while use the phrase **resource unpredictability** to indicate the variability in resource abundance due to *unpredictable* causes. On its own, a habitat's long-term resource abundance is not sufficient to assess the habitat's quality. A grassland with relatively low but constant forage availability will require drastically different behaviors and adaptations from a desert location with rare, sudden, and strong pulses of resources. In the first scenario, an animal may require a large but constant home range as it moves between locations in search of food, while an animal in the second scenario may switch between dispersal as it searches for high-resource patches and short-term range residency until the local resources are exhausted. Although both habitats may have the same long-term average resource abundance, the differences in resource unpredictability result in substantially different habitats. Despite this, little work has been done on estimating the effects of resource unpredictability on animals' spatial needs [but see @rizzuto_forage_2021; @herfindal_prey_2005; @nilsen_can_2005].
+In this paper, we refer to a location's average amount of available and accessible resources as **resource abundance**, while use the phrase **resource unpredictability** to indicate the variability in resource abundance due to *unpredictable* causes. We argue that, on its own, a habitat's long-term resource abundance is not sufficient to assess the habitat's quality. For instance, a grassland with relatively low but constant forage availability will clearly require drastically different behaviors and adaptations from a desert location with rare, sudden, and strong pulses of resources. In the first scenario, an animal may require a large but constant home range as it moves between locations in search of food, while an animal in the second scenario may switch between dispersal as it searches for high-resource patches and short-term range residency until the local resources are exhausted. Although it may be possible for both habitats to have the same long-term average resource abundance, the differences in resource unpredictability result in substantially different movement strategies being selected for. Although it is generally expected that resource unpredictability will decrease animals' fitness and a landscape's energetic balance [@chevin_adaptation_2010], there is little empirical evidence to support this hypothesis [but see: @herfindal_prey_2005; @nilsen_can_2005; @rizzuto_forage_2021].
 
-In this study, we illustrate how animals' spatial needs depend on the abundance and unpredictability of resources. First, we set the theoretical background necessary for the successive sections, and concepts and notation are introduced without assuming any previous knowledge of statistical notation or movement ecology. Next, we provide a review of the effects of resource abundance on animals spatial needs while suggesting a unifying hypothesis. Afterwards, we provide a review of the effects of resource unpredictability on animals spatial needs while suggesting a second unifying hypothesis. Subsequently, we test the two hypotheses using quantitative simulated animal responses to changes in resource abundance and unpredictability. Finally, we demonstrate how this framework can be used in practice to describe the movement ecology of a lowland tapir living in the Brazilian Cerrado. Results from the simulations and empirical example are presented using a fully transparent approach that allows researchers to replicate the work and apply the methods to their own tracking data.
-
-\newpage
+In the following sections, we illustrate how animals' spatial needs depend on the abundance and unpredictability of resources. First, we set the theoretical background necessary for the successive sections, and concepts and notation are introduced without assuming any previous knowledge of statistical notation or movement ecology. Next, we provide a review of the effects of resource abundance on animals spatial needs while suggesting a unifying hypothesis. Afterwards, we provide a review of the effects of resource unpredictability on animals spatial needs while suggesting a second unifying hypothesis. Subsequently, we test the two hypotheses using quantitative simulated animal responses to changes in resource abundance and unpredictability. Finally, we demonstrate how this framework can be used in practice to describe the movement ecology of a lowland tapir living in the Brazilian Cerrado. Results from the simulations and empirical example are presented using a fully transparent approach that allows researchers to replicate the work and apply the methods to their own tracking data.
 
 # Concepts and definitions
+
+In this section, we presents the foundational concepts and terms used in this manuscript. We introduce each concept without assuming a strong statistical or quantitative background to maximize accessibility and minimize misunderstandings and misinterpretations.
 
 ## Resources as a random variable
 
@@ -143,17 +148,17 @@ In this study, we illustrate how animals' spatial needs depend on the abundance 
 
 ### Probability distributions
 
-\noindent In probability and statistics, random variables are defined by specifying the **distribution** the variable follows. Since the variable is random, it can take multiple values (minimum 2), each with different probabilities. Commonly known distributions include the normal (i.e., Gaussian) distribution, the Student's T distribution, and the Bernoulli distribution.
+\noindent In probability and statistics, random variables are defined by specifying the **distribution** the variable is assumed to follow. Since the variable is random, it can take multiple values, each with different probabilities. Commonly known distributions include the normal (i.e., Gaussian) distribution, the Student's T distribution, and the Bernoulli distribution.
 
 The set or range of values which have non-zero probabilities in a distribution are referred to as the distribution's **support**. The support of the normal and T distributions are all real numbers (i.e., from $-\infty$ to $\infty$), while the Bernoulli distribution only has support over values 0 and 1. 
 
-There are many distributions we can assign to $R$, depending on how we quantify it. If $R$ is the number of calories an animal is able to access from food in a given location, we can let $R$ follow any distribution with support over all real numbers between 0 and infinity, which we can indicate with $r \in (0, \infty)$. (We use round parentheses rather than square brackets (i.e., $[0, \infty]$) because both 0 and infinity are not included in the support set.) In this case, we can let $R$ follow a Gamma distribution. If $R$ was a discrete variable, such as the number of prey in a location during a period of time, we can use a Poisson or negative binomial distribution for $R$. Alternatively, if we measure $R$ using the Normalized Difference Vegetation Index [**NDVI**, see @pettorelli_normalized_2011], we should use a distribution with support over the interval $[-1, 1]$, since NDVI can only take on values between -1 and 1 (extremes included). The next two sections introduce two parameters that are often used to visualize and define distributions: the expectation and the variance of a random variable.
+There are many distributions we can assign to $R$, depending on how we quantify it. If $R$ is the number of calories an animal is able to access from food in a given location, we can let $R$ follow any distribution with support over all real numbers between 0 and infinity, which we can indicate with $R \in (0, \infty)$.^[We use round parentheses rather than square brackets (i.e., $[0, \infty]$) because neither 0 nor infinity are included in the distribution's support set.] In this case, we can let $R$ follow a Gamma or log-normal distribution. If $R$ was a discrete variable, such as the number of prey in a location during a period of time, we can use a Poisson or negative binomial distribution. Alternatively, if we measure $R$ using the Normalized Difference Vegetation Index [**NDVI**, see @pettorelli_normalized_2011], we should use a distribution with support over the interval $[-1, 1]$, since NDVI can only take on values between -1 and 1 (extremes included). The next two sections introduce two parameters that are often used to visualize, compare, and define distributions: the expectation and the variance of a random variable.
 
 ### Expected resource abundance, $\e(R)$
 
-\noindent The **expectation** of a random variable (i.e. its mean or average, indicated here with the symbol $\e$) is the value one can *expect* the random variable to take. $\e(R) = \mu$ to indicate the expectation of the random variable $R$. The mean may not be within the distribution's support (e.g., a non-integer number of prey per day), but $\e(R)$ is still useful for estimating the average long-term resource abundance. When the mean changes over time, as in the case changes in $R$ in highly seasonal regions, we explicitly indicate that $\e(R) = \mu$ changes over time by writing the expectation of $R$ as a function of time, $t$: $\e(R) = \mu(t)$. We indicate the estimated average resource abundance by adding a caret on the symbol: $\hat \mu(t)$.
+\noindent Since the exact value of $R$ at a given time and location is unknown, comparing the magnitude in $R$ between two locations or time periods requires a quantitative measure of what value we believe $R$ will take, on average. The **expectation** of a random variable (i.e. its mean or average, indicated here with the symbol $\e$) is the value one can *expect* the random variable to take. Thus, we use $\e(R) = \mu$ to indicate the expectation of the random variable $R$. The mean may not be within the distribution's support (e.g., a non-integer number of prey per day), but $\e(R)$ is still useful for estimating the average long-term resource abundance. When the mean changes over time, as in the case changes in $R$ in highly seasonal regions, we explicitly indicate that $\e(R) = \mu$ changes over time by writing the expectation of $R$ as a function of time, $t$: $\e(R) = \mu(t)$. We indicate the estimated average resource abundance by adding a caret on the symbol: $\hat \mu(t)$.
 
-The hypothesis that spatial needs decrease with resource abundance is common and well supported, but many studies assume a linear relationship [e.g., @harestad_home_1979; @relyea_home_2000; @rizzuto_forage_2021; @bista_effect_2022; @bradsworth_using_2022; @mcclintic_effects_2014]. This is problematic because it can lead to questionable estimates and problematic biases, such as negative or excessively small home ranges [e.g., figure 2 in the work of @bista_effect_2022]. Conceptually, the relationship between spatial needs and resource abundance must be nonlinear, since there are limits to how much space an animal is able to explore in its lifetime and the minimum amount of space it requires to survive (which is necessarily greater than zero). The relationship between resource abundance and animals' spatial needs is explored in more depth in a following section.
+The hypothesis that spatial needs decrease with resource abundance, $R$, is commonly accepted and well supported, but many studies assume a linear relationship [e.g., @harestad_home_1979; @relyea_home_2000; @rizzuto_forage_2021; @bista_effect_2022; @bradsworth_using_2022; @mcclintic_effects_2014]. This is problematic because it can lead to questionable estimates and problematic biases, such as negative or excessively small home ranges [e.g., figure 2 in the work of @bista_effect_2022]. Conceptually, the relationship between spatial needs and resource abundance must be nonlinear, since there are limits to how much space an animal is able to explore in its lifetime and the minimum amount of space it requires to survive (which is necessarily greater than zero). As $\e(R)$ increases, we expect animals' spatial requirements to decrease nonlinearly until they reach the smallest amount of space required to survive [see @relyea_home_2000; @bista_effect_2022, although the latter uses models which assume linear relationships]. The spatial requirements initially decrease rapidly since small additive increases (e.g., from 1 to 2) are proportionally large (i.e., 2 is twice 1). In contrast, at higher values of $\e(R)$, the same additive changes (e.g. from 50 to 51) are proportionally small (i.e., 51 is only 2% larger than 50).
 
 ### Variance in resource abundance, $\var(R)$
 
@@ -212,8 +217,6 @@ Predicting animal movement using stochastic models may seem less straightforward
 \noindent The concept of a home range has a long history in ecological research as an indicator of the space an animal requires to satisfy its essential requirements during a period of time [@burt_territoriality_1943], but home range analysis is not appropriate for animals which are not range-resident, such as migrating animals [e.g., @jonzen_rapid_2006; @geremia_migrating_2019; @abrahms_memory_2019] and nomadic animals [e.g., @morato_space_2016; @nandintsetseg_variability_2019]. Although here we quantify animal's spatial needs using 50% and 95% home range estimates, we expect that similar conclusions can be drawn about the positional variance, $\vpos$, of animals that are not range-resident. In the case of animals that are range resident for short periods of time, we can model their movement and short-term spatial needs using a sliding window approach (see the discussion section).
 
 **I don't think we need this paragraph:** Although range-resident animals will generally have smaller positional variance ($\vpos$) than migratory and nomadic animals, $\vpos$ is not sufficient to distinguish between range residency, migration, and nomadism, since $\vpos$ determines the scale and size of an animal's spatial needs but not its behavior. Instead, the animal's $\tau_p$, $\tau_v$, and $\bar v$ can help discriminate between different behaviors. Animals with a $\tau_p$ shorter than a year are likely range-resident, while animals with a $\tau_p$ on the order of a year are likely to be migratory (as long as their life expectancy is greater than a year). In contrast, when an animal's $\tau_p$ is on the order of its expected lifespan, it is most often nomadic, since it does not have a position it returns to regularly.
-
-\newpage
 
 # Effects of resource abundance, $\e(R)$
 
@@ -396,11 +399,9 @@ Accounting for changes in resource abundance and resource stochasticity (e,g, be
 
 <!-- create a pdf for supplementary information on how to create the 5x5 panel and run methods w real data, as well as considerations and potential issues about modeling means and variances -->
 
-\newpage
-
 # Conclusion
 
-\noindent The work presented here provides a unifying framework for viewing animal movement as a function of resource abundance. We provide realistic and flexible hypotheses of the effects of $\e(R)$ and $\var(R)$ on animals' spatial needs and movement behavior. We demonstrate that animals' spatial needs respond nonlinearly to both resource abundance and stochasticity, and we demonstrate the importance of accounting for $\var(R)$ besides $\e(R)$. We also provide a way of modeling animal movement continuously rather than imposing arbitrary thresholds between different types of behaviors, including temporal changes in spatial needs and shifts between range-residency and nomadism). The methods presented here can be applied to assess the current and future quality of protected areas while also estimating the amount of space animals currenly need and will need in the future under different climate change scenarios.
+\noindent The work presented here provides a unifying framework for viewing animal movement as a function of resource abundance. We provide realistic and flexible hypotheses of the effects of $\e(R)$ and $\var(R)$ on animals' spatial needs and movement behavior. We demonstrate that animals' spatial needs respond nonlinearly to both resource abundance and stochasticity, and we demonstrate the importance of accounting for $\var(R)$ besides $\e(R)$. We also provide a way of modeling animal movement continuously rather than imposing arbitrary thresholds between different types of behaviors, including temporal changes in spatial needs and shifts between range-residency and nomadism). The methods presented here can be applied to assess the current and future quality of protected areas while also estimating the amount of space animals currently need and will need in the future under different climate change scenarios.
 
 \newpage
 
@@ -417,8 +418,6 @@ Simulation refs: @cain_random_1985, @blackwell_heterogeneity_2007, @quaglietta_s
 Patch connectivity and ease of movement may widen HRs by decreasing the energetic cost of movement and favoring exploration [@dickie_resource_2022], or they may shrink HRs by decreasing the energetic cost of movement while increasing encounter rates with resources [@martinez-garcia_how_2020; @bartumeus_influence_2008; @visser_plankton_2006].
 
 However, not all animals take advantage of linear features or higher predictability in human-altered habitats. @noonan_roads_2021 found that giant anteaters (*Myrmecophaga tridactyla*) in Brazil did not use roads to reduce movement costs or increase movement speed. Instead, roads increased anteater mortality because the animals were attracted to the high-quality foraging found on roadside habitat. Similarly, @medici_movement_2022 found that the movement of tapirs (*Tapirus terrestris*) was unaffected by anthropogenic activity or habitat type.
-
-\newpage
 
 <!--
 ## Frontiers  Hierarchical, Memory-Based Movement Models for Translocated Elk (Cervus canadensis)  Ecology and Evolution
