updated manuscript with comments from 2023-07-05

--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -4872,3 +4872,36 @@ Version Number: 1},
 	pages = {398--405},
 	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\PIXAUPXQ\\Wallingford et al. - 2020 - Adjusting the lens of invasion biology to focus on.pdf:application/pdf},
 }
+
+@article{andersson_elbow-joint_2004,
+	title = {Elbow-joint morphology as a guide to forearm function and foraging behaviour in mammalian carnivores},
+	volume = {142},
+	issn = {1096-3642, 0024-4082},
+	url = {https://academic.oup.com/zoolinnean/article-lookup/doi/10.1111/j.1096-3642.2004.00129.x},
+	doi = {10.1111/j.1096-3642.2004.00129.x},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-06},
+	journal = {Zoological Journal of the Linnean Society},
+	author = {Andersson, Ki},
+	month = sep,
+	year = {2004},
+	pages = {91--104},
+	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\M6LRVPTV\\Andersson - 2004 - Elbow-joint morphology as a guide to forearm funct.pdf:application/pdf},
+}
+
+@article{samuels_postcranial_2013,
+	title = {Postcranial morphology and the locomotor habits of living and extinct carnivorans},
+	volume = {274},
+	issn = {03622525},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/jmor.20077},
+	doi = {10.1002/jmor.20077},
+	language = {en},
+	number = {2},
+	urldate = {2023-07-06},
+	journal = {Journal of Morphology},
+	author = {Samuels, Joshua X. and Meachen, Julie A. and Sakai, Stacey A.},
+	month = feb,
+	year = {2013},
+	pages = {121--146},
+}
